[package]
name = "mudtty"
version = "0.1.0"
authors = ["Alex Mills <alex.mills@s5stratos.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio      = { version = "0.2", features = ["full"] }
tokio-util = { version = "0.2", features = ["codec"] }
futures    = "*"
bytes      = "*"